objects/appirio_core__Config_Group__c.object
<CustomObject>
    <customHelpPage>appirio_core__ConfigurationHelp</customHelpPage>
    <description>Core package object. Configuration groups are organized by function--for example, Create Project--and have a name, unique key, description, and version. They each contain several configuration options: use these to configure FinancialForce PSA, as well as Salesforce custom settings.</description>
    <fields>
        <fullName>appirio_core__Description__c</fullName>
        <description>Description of the config group</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>appirio_core__Key__c</fullName>
        <description>A unique identifier for this group that can be used in code to retrieve this group.</description>
        <label>Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>appirio_core__Version__c</fullName>
        <description>The version of the application that this option was added</description>
        <label>Version</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Configuration Group</label>
    <listViews>
        <fullName>appirio_core__All</fullName>
        <columns>NAME</columns>
        <columns>appirio_core__Key__c</columns>
        <columns>appirio_core__Description__c</columns>
        <columns>appirio_core__Version__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Configuration Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>